--- a/money-count.html
+++ b/money-count.html
@@ -79,11 +79,11 @@
     </table>
     <p id="savedMessage" class="saved-message">تم حفظ العملية بنجاح!</p>
   </div>
+    <div class="footer">
+  <p>جميع الحقوق محفوظة &copy; أحمد - هاتف: 01002241591</p>
+</div>
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
 
-    <script>
-
-      
-    </script>
+   
 </body>
 </html>
