--- a/money-count.html
+++ b/money-count.html
@@ -80,7 +80,7 @@
     <p id="savedMessage" class="saved-message">تم حفظ العملية بنجاح!</p>
   </div>
     <div class="footer">
-  <p>جميع الحقوق محفوظة &copy; أحمد - هاتف: 01002241591</p>
+  <p>جميع الحقوق محفوظة &copy; علي أحمد  - هاتف: 01002241591</p>
 </div>
   <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
 
